--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,14 @@
     box-sizing: border-box;
 }
 
-.item {
+.card {
     border: 1px dashed orange;
     text-align: center;
     font-size: 20px;
     font-weight: 600;
     font-family: system-ui, sans-serif;
+}
+
+.card.active {
+    background: orange;
 }
