--- a/grid.css
+++ b/grid.css
@@ -1,18 +1,15 @@
 /* X-Small devices (portrait phones, less than 576px) */
 /* No media query for `xs` since this is the default in Bootstrap */
-.container {
+.container,
+.container-fluid {
     --column-size: 12;
-    --spacer: 30px;
+    --spacer: 12px;
 
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.container-fluid {
-    width: 100%;
+    padding-left: calc(var(--spacer) / -2);
+    padding-right: calc(var(--spacer) / -2);
 }
 
 .row {
@@ -26,11 +23,16 @@
     --spacer: 0;
 }
 
-.row[class*="row-cols-"] > * {
+.col,
+.row[class*="row-cols-"] > *,
+.row > [class*="col-"] {
     flex: 0 0 auto;
-    width: calc(100% / var(--row-cols-number));
     padding-left: calc(var(--spacer) / 2);
     padding-right: calc(var(--spacer) / 2);
+}
+
+.row[class*="row-cols-"] > * {
+    width: calc(100% / var(--row-cols-number));
 }
 
 .row-cols-1 {
@@ -58,16 +60,11 @@
 }
 
 .row > [class*="col-"] {
-    flex: 0 0 auto;
     width: calc(100% / var(--column-size) * var(--column-number));
-    padding-right: calc(var(--spacer) / 2);
-    padding-left: calc(var(--spacer) / 2);
 }
 
 .col {
     flex: 1 0;
-    padding-left: calc(var(--spacer) / 2);
-    padding-right: calc(var(--spacer) / 2);
 }
 
 .col-1 {
@@ -173,7 +170,13 @@
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
     .container {
+        --spacer: 12px;
+
         max-width: 540px;
+    }
+
+    .g-sm-0 {
+        --spacer: 0;
     }
 
     .row-cols-sm-1 {
@@ -300,7 +303,12 @@
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
     .container {
+        --spacer: 24px;
         max-width: 720px;
+    }
+
+    .g-md-0 {
+        --spacer: 0;
     }
 
     .row-cols-md-1 {
@@ -427,7 +435,13 @@
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
     .container {
+        --spacer: 30px;
+
         max-width: 960px;
+    }
+
+    .g-lg-0 {
+        --spacer: 0;
     }
 
     .row-cols-lg-1 {
@@ -557,6 +571,10 @@
         max-width: 1140px;
     }
 
+    .g-xl-0 {
+        --spacer: 0;
+    }
+
     .row-cols-xl-1 {
         --row-cols-number: 1;
     }
@@ -682,6 +700,10 @@
 @media (min-width: 1400px) {
     .container {
         max-width: 1320px;
+    }
+
+    .g-xxl-0 {
+        --spacer: 0;
     }
 
     .row-cols-xxl-1 {
